# graphium

./: .gitignore  Cargo.toml  README.md  TODO  prompt.txt
.docker/: Dockerfile.ui  docker-compose.dev.yml  docker-compose.yml  otel-collector.yml  prometheus.yml
.docker/ecommerce/: Dockerfile  Dockerfile.ui  docker-compose.yml
.github/workflows/: ci.yml  security.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: ___dto.rs  dto.rs  export.rs  lib.rs  metrics.rs  node_registry.rs  playground.rs  telemetry.rs  test_registry.rs  visualizer.rs
crates/core/src/dto/: ctx.rs  graph.rs  io.rs  mod.rs  node.rs  playground.rs  test.rs
crates/examples/: Cargo.toml
crates/examples/src/: graph.rs  main.rs  node.rs
crates/macro/: Cargo.toml  README.md
crates/macro/src/: graph.rs  graph_runtime.rs  graph_test.rs  ir.rs  lib.rs  node.rs  node_test.rs  parser.rs  shared.rs
crates/macro/src/graph/: mod.rs
crates/macro/src/graph_macro/: analysis.rs  dispatch.rs  dto.rs  execution.rs  expand.rs  flow.rs  graph_def.rs  loops.rs  metrics.rs  mod.rs  parallel.rs  parse.rs  payload.rs  playground.rs  route.rs  selector.rs  single.rs
crates/macro/src/graph_macro/expand/: async.rs  dto.rs  flow.rs  metadata.rs  metrics.rs  mod.rs  playground.rs  sync.rs
crates/macro/src/graph_macro/expand/runtime/: async.rs  mod.rs  sync.rs
crates/macro/src/graph_macro/expr/: dispatch.rs  loops.rs  mod.rs  parallel.rs  payload.rs  route.rs  selector.rs  single.rs
crates/macro/src/node/: expand.rs
crates/macro/src/node_macro/: expand.rs  metrics.rs  mod.rs  parse.rs
crates/macro/src/test_macro/: graph.rs  mod.rs  node.rs  registry.rs  util.rs
crates/macro/tests/: artifacts.rs  async_graph.rs  compile_fail.rs  context.rs  e2e_graph.rs  e2e_graph_macro.rs  if_branching.rs  loops.rs  match_branching.rs  metrics.rs  mutability.rs  negative.rs  node_test.rs  nodes.rs  parallel.rs
crates/macro/tests/compile_fail/e2e_graph/: artifacts.rs  artifacts.stderr
crates/macro/tests/data/: ctx.rs  mod.rs  node.rs
crates/macro/tests/e2e_graph/: artifacts.rs  async_graph.rs  context.rs  if_branching.rs  loops.rs  match_branching.rs  metrics.rs  nesting.rs  node_test.rs  nodes.rs  parallel.rs
crates/macro/tests/negative/: artifacts.stderr
crates/macro/tests/negative/artifacts/: artifacts_borrow_require_borrowing.rs  artifacts_borrow_require_borrowing.stderr  artifacts_drop_require_borrowing.rs  artifacts_drop_require_borrowing.stderr  artifacts_move_require_propagation.rs  artifacts_move_require_propagation.stderr  artifacts_unvailable_after_drop.rs  artifacts_unvailable_after_drop.stderr
crates/macro/tests/negative/mutability/: missing_mut_borrow.rs  missing_mut_borrow.stderr
crates/ui/: Cargo.toml  README.md
crates/ui-next/: Cargo.toml  README.md
crates/ui-next/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  mermaid.rs  server.rs  util.rs
crates/ui-next/src/pages/: graph.rs  graphs.rs  home.rs  mod.rs  node.rs  tests.rs
crates/ui-next/src/state/: build.rs  graph.rs  index.rs  mod.rs  node.rs  test.rs
crates/ui-next/templates/: app.html
crates/ui-next/templates/layouts/: default.html  shell.html
crates/ui-next/templates/pages/: dashboard.html  graph_fragment.html  graphs.html  home.html  node.html  run_test.html  tests.html
crates/ui/assets/css/: global.css
crates/ui/src/: config.rs  error.rs  http.rs  layout.rs  lib.rs  logs.rs  main.rs  mermaid.rs  metrics.rs  server.rs  state.rs  traces.rs  types.rs  util.rs
crates/ui/src/pages/: graph.rs  graphs.rs  home.rs  mod.rs  node.rs  nodes.rs  tests.rs
crates/ui/src/state/: build.rs  graph.rs  index.rs  mod.rs  node.rs  playground.rs  test.rs
crates/ui/templates/layouts/: shell.html
crates/ui/templates/pages/: graph_fragment.html  graphs.html  home.html  node.html  nodes.html  tests.html
