[package]
name = "graphium"
version = "0.1.0"
edition = "2024"

[lib]
name = "graphium"

[dependencies]
prometheus = "0.13"
serde = { version = "1", features = ["derive"], optional = true }
graphium-macro = { version = "0.1.0", path = "../macro", optional = true }

[features]
# Enables DTO serde support (`graphium::serde` re-export + serde derives).
export = ["dep:serde"]
# Back-compat alias (deprecated): prefer `export`.
serialize = ["export"]
macros = ["dep:graphium-macro"]
