[package]
name = "graphium"
version = "0.1.0"
edition = "2024"

[lib]
name = "graphium"
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
graphium-macro = { version = "0.1.0", path = "../macro", optional = true }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics", "logs"] }
once_cell = "1.21.4"
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
opentelemetry-appender-tracing = "0.31.0"

[features]
# Enables DTO serde support (`graphium::serde` re-export + serde derives).
export = ["dep:serde"]
# Enables macro-generated `Graph::dto()` / `Graph::flow()` helpers (no serde).
dto = []
# Enables macro-generated metrics wrappers and helpers.
metrics = []
# Enables macro-generated trace spans (OTLP to Tempo by default).
trace = []
# Enables macro-generated logs export (OTLP to Loki by default).
logs = []
# Enables macro-generated `GraphPlayground` impls.
playground = []
# Back-compat alias (deprecated): prefer `export`.
serialize = ["export"]
macros = ["dep:graphium-macro"]
