[package]
name = "graphium-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

# graphium crates
graphium = { version = "0.1.0", path = "../core", default-features = false }
graphium-macro = { version = "0.1.0", path = "../macro" }
graphium-ui-next = { version = "0.1.0", path = "../ui-next" }

[features]
default = ["serialize"]
serialize = ["graphium/serialize"]
