[package]
name = "graphium-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }

# graphium crates
graphium = { version = "0.1.0", path = "../core", default-features = false }
graphium-macro = { version = "0.1.0", path = "../macro" }
graphium-ui = { version = "0.1.0", path = "../ui" }

[features]
default = ["serialize"]
serialize = ["graphium/serialize"]
