[package]
name = "graphium-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }

# graphium crates
graphium = { version = "0.1.0", path = "../core", default-features = false }
graphium-ui = { version = "0.1.0", path = "../ui", optional = true }

[features]
default = ["full"]

# "real world" app build: macros + telemetry (no DTO/export/UI/playground).
macro = ["macros", "metrics", "trace", "logs"]

# Dev/admin build: UI + DTO/export + telemetry + playground.
full = ["ui", "export", "dto", "metrics", "trace", "logs", "playground", "macros"]

ui = ["dep:graphium-ui"]
macros = ["graphium/macros"]
export = ["graphium/export"]
dto = ["graphium/dto"]
metrics = ["graphium/metrics"]
trace = ["graphium/trace"]
logs = ["graphium/logs"]
playground = ["graphium/playground"]
# Back-compat alias (deprecated): prefer `export`.
serialize = ["export"]
