[package]
name = "graphium-macro"
version = "0.1.0"
edition = "2024"

[lib]
name = "graphium_macro"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
graphium = { version = "0.1.0", path = "../core" }
futures = "0.3"
