[package]
name = "graphium-macro"
version = "0.1.0"
edition = "2024"

[lib]
name = "graphium_macro"
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
graphium = { version = "0.1.0", path = "../core" }
futures = "0.3"

[features]
# This feature is intentionally mirrored by downstream crates that want
# macro-generated graph/node types to export DTO helpers and implement serde
# `Serialize`.
export = []
# Enables macro-generated graph DTO helpers (`flow()` / `dto()`), without serde.
dto = []
# Enables macro-generated graph metrics wrappers and helpers.
metrics = []
# Enables macro-generated playground helpers.
playground = []
# Back-compat alias (deprecated): prefer `export`.
serialize = ["export"]
